# physics

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEVLOG.md  LICENSE  README.md  roadmap.md
bench/: micro_step.cpp
bindings/python/: ape.py
cbindings/: ape_c.c  ape_c.cpp
cmake/: APEConfig.cmake.in
docs/: ARCHITECTURE.md  BINDINGS.md  PERFORMANCE-NOTES.md  RESEARCH-NOTES.md  RESEARCH.md  ROADMAP.md  WASM.md
examples/: CMakeLists.txt  minimal.cpp
include/ape/: ape.h  ape_c.h  broadphase.h  job.h  narrowphase.h  version.h
src/: ape.cpp  ape_export.cpp
src/collision/: broadphase.cpp  narrowphase.cpp
src/foundation/: job.cpp
test/: box_shapes.cpp  broadphase.cpp  broadphase_sweep.cpp  c_api_destroy.c  c_api_smoke.c  collision_spheres.cpp  destroy.cpp  determinism.cpp  handles.cpp  restitution.cpp  sleeping.cpp  smoke.cpp  solver_velocity.cpp  world_broadphase_integration.cpp
web/: index.html  styles.css
web/js/: ape_wasm.js  engine.js
web/js/demos/: collision_spheres.js  falling.js  gravity_playground.js  stacking.js
